--- a/ITIS3135/index.html
+++ b/ITIS3135/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>I am Arthur Soong and this is my ITIS3135 Course Page"</title>
+    <title>Arthur's Website</title>
 </head>
 <body>
     <header>
         <h1>this is my website</h1>
     </header>
     <main>
-        <h2>IDRK what to write here :/</h2>
+        <h2>I am Arthur Soong and this is my ITIS3135 Course Page</h2>
         don't use any css 
     </main>
     <footer>
