--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <footer>
         <hr>
         demo site for ITIS 3135
-        <a href="itis3135/">Click here to go to my ITIS 3135 page</a>
+        <a href="itis3135/index.html">Click here to go to my ITIS 3135 page</a>
     </footer>
 </body>
 </html>
