--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1>this is my website</h1>
     </header>
     <main>
-        <h2>I am Arthur Soong and this is my ITIS3135 Course Page</h2>
+        <h2>I am Arthur Soong and this is my Website!</h2>
         don't use any css 
     </main>
     <footer>
