--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arthur Soong</title>
+    <title>Arthur's Course Page</title>
 </head>
 <body>
     <header>
-        <h1>welcome to Arthur's ebsite</h1>
+        <h1>welcome to Arthur's Course Page</h1>
     </header>
     <main>
         <h2>I am Arthur Soong and this is my ITIS 3135 Course Page</h2>
