--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -8,14 +8,23 @@
 </head>
 <body>
     <header>
-        <h1>welcome to Arthur's Course Page</h1>
+        <h1>Welcome to Arthur's Annoyed Stoat | ITIS 3135 Course Page</h1>
+        <nav>
+            <a href="./introduction.html">Introduction page</a> |
+            <a href="../index.html">Website page</a> |
+            <a href="./contract.html">Contract page</a>
+        </nav>
     </header>
     <main>
-        <h2>I am Arthur Soong and this is my ITIS 3135 Course Page</h2>
+        <hr>
+        <h2>Arthur's ITIS 3135 Course Page</h2>
     </main>
     <footer>
-        <hr>
-        demo site for ITIS 3135
+        <a href="https://webpages.charlotte.edu/asoong1">CLT Web</a> |
+        <a href="https://asoong1245.github.io/">GitHub.io</a> |
+        <a href="https://github.com/asoong1245">GitHub</a> |
+        <a href="https://www.freecodecamp.org/Asoong">FreeCodeCamp</a> |
+        <a href="https://www.linkedin.com/in/arthur-e-soong/">LinkedIn</a>
     </footer>
 </body>
 </html>
