--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -9,7 +9,7 @@
 
 
     <main>
-        <p>I understand that what I put here is publicly available on the web and I won’t put anything here I don’t want the public to see - AES - 1/14/2026</p>
+        <p>I understand that what I put here is publicly available on the web and I won’t put anything here I don’t want the public to see - <i>AES - 1/14/2026</i></p>
         <h2>Arthur E. Soong | Annoyed Stoat</h2>
         <figure>
         <img src = images/BLUEANGELS.png width = "500" alt = "US Navy fighter jets at a airshow">
