--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -6,7 +6,7 @@
     <title>Introduction Page</title>
     <h1>Soong, Arthur E.</h1>
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="default.css">
+    <link rel="stylesheet" href="../default.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Playfair+Display&display=swap" rel="stylesheet">
 
 
