--- a/itis3135/website_evaluations.html
+++ b/itis3135/website_evaluations.html
@@ -6,7 +6,7 @@
     <title>Arthur Soong CRAP website evaluations</title>
 </head>
 <body>
-    <div data-include="components/Header.html"></div>
+    <div data-include="../components/Header.html"></div>
     <h1>Arthur Soong CRAP website evaluations</h1>
     <h2>CRAP design evaluation</h2>
     <h3>
@@ -27,7 +27,7 @@
         <li><strong>Alignment:</strong> Very bad alignment, content on the page is arranged in uneven sections.</li>
         <li><strong>Proximity:</strong> Related information is separated and unrelated elements are grouped together making things confusing.</li>
     </ul>
-    <div data-include="components/Footer.html"></div>
-    <script src = "scripts/HTMLinclude.min.js"></script>
+    <div data-include="../components/Footer.html"></div>
+    <script src = "../scripts/HTMLinclude.min.js"></script>
 </body>
 </html>
