--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <br>
         <a href="itis3135/website_evaluations.html">Click here to go to my CRAP Website Evaluation page</a>
     </main>
-    <div data-include="components/Footer.html"></div>
+    <div data-include="itis3135/components/Footer.html"></div>
     <script src = "itis3135/scripts/HTMLinclude.min.js"></script>
 </body>
 </html>
