--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -10,7 +10,7 @@
 
 
     <main>
-        <div data-include="components/Header.html"></div>
+        <div data-include="components/header.html"></div>
         <p>I understand that what I put here is publicly available on the web and I won’t put anything here I don’t want the public to see - <i>AES - 1/14/2026</i></p>
         <h2>Arthur E. Soong | Annoyed Stoat</h2>
         <figure>
@@ -62,7 +62,7 @@
             <q>Without music, life would be a mistake.</q> <cite> - Friedrich Nietzsche</cite>
         </blockquote>
     </main>
-    <div data-include= "components/Footer.html"></div>
+    <div data-include= "components/footer.html"></div>
     <script src = "scripts/HTMLinclude.min.js"></script>
 </body>
 </html> 
