--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -7,13 +7,13 @@
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div data-include="itis3135/components/Header.html"></div>
+    <div data-include="itis3135/components/header.html"></div>
     <main>
         <hr>
         <h2>Arthur's ITIS 3135 Course Page</h2>
         <a href="itis3135/website_evaluations.html">Click here to go to my CRAP Website Evaluation page</a>
     </main>
-    <div data-include="../components/Footer.html"></div>
+    <div data-include="components/footer.html"></div>
     <script src = "itis3135/scripts/HTMLinclude.min.js"></script>
 </body>
 </html>
