--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -5,13 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arthur's Course Page</title>
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../default.css">
 </head>
 <body>
     <div data-include="components/header.html"></div>
     <main>
         <hr>
         <h2>Arthur's ITIS 3135 Course Page</h2>
+        <p>I'm Arthur Soong and this is my ITIS 3135 course page.</p>
         <a href="website_evaluations.html">Click here to go to my CRAP Website Evaluation page</a>
+        <br>
+        <a href="contract.html">Click here to go to my Contract page</a>
+        <br>
+        <a href="contract.html">Click here to go to my Introduction page</a>
+        <br>
     </main>
     <div data-include="components/footer.html"></div>
     <script src = "scripts/HTMLinclude.min.js"></script>
