--- a/itis3135/arthuresoong.com/index.html
+++ b/itis3135/arthuresoong.com/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Lumina Creative Studio</title>
+<title>Arthur Soong's Design Services</title>
 
 <style>
 /* 0B132B
